# w4x

./: LICENSE.txt  README.md  pyproject.toml
docs/: Requirements.v2.md
src/w4x/: cli.py
tests/: __init__.py
