[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "w4x"
dynamic = ["version"]
description = "Web for Extraction. It's not a crawler, it's a controlled extractor - a toolchain for building reproducible, auditable web data pipelines"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = [
  "web", "extract", "content", 
]
authors = [
  { name = "dev4dojo"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "aiohttp"
]

[project.urls]
Documentation = "https://github.com/dev4dojo/w4x#README"
Issues = "https://github.com/dev4dojo/w4x/issues"
Source = "https://github.com/dev4dojo/w4x"

[project.scripts]
w4x="w4x.cli:handler"

[tool.hatch.version]
path = "src/w4x/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/w4x}"

[tool.coverage.run]
source_pkgs = ["w4x"]
branch = true
parallel = true
omit = [
  "src/w4x/__about__.py",
]

[tool.coverage.paths]
w4x = ["src/w4x"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
